# python_module

./: .gitignore
python00/ex4/: ft_water_reminder.py
python00/ex5/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py  main.py
python00/ex6/: ft_garden_summary.py
python00/ex7/: ft_seed_inventory.py
python01/ex0/: ft_garden_intro.py
python01/ex1/: ft_garden_data.py
python01/ex2/: ft_plant_growth.py
python01/ex3/: ft_plant_factory.py
python01/ex4/: ft_garden_security.py
python01/ex5/: ft_plant_types.py
python01/ex6/: ft_garden_analytics.py
python02/ex0/: ft_first_exception.py
python02/ex1/: ft_different_errors.py
python02/ex2/: ft_custom_errors.py
python02/ex3/: ft_finally_block.py
python02/ex4/: ft_raise_errors.py
python02/ex5/: ft_garden_management.py
python03/ex0/: ft_command_quest.py
python03/ex1/: ft_score_analytics.py
python03/ex2/: ft_coordinate_system.py
python03/ex3/: ft_achievement_tracker.py
python03/ex4/: ft_inventory_system.py
python03/ex5/: ft_data_stream.py
python03/ex6/:  ft_data_alchemist.py
python04/: sample_data.json
python04/ex0/: ft_ancient_text.py
python04/ex1/: ft_archive_creation.py
python04/ex2/: ft_stream_management.py
python04/ex3/: ft_vault_security.py
python04/ex4/: ft_crisis_response.py
python06/: ft_alembic_3.py  ft_alembic_4.py  ft_circular_curse.py  ft_import_transmutation.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_pathway_debate.py  ft_sacred_scroll.py
python07/: battle.py  capacitor.py  tournament.py
python08/ex1/: loading.py  pyproject.toml  requirements.txt
(+38 files in other folders)
