[project]
name = "matrix-data-visualization"
version = "0.1.0"
description = "generate random graph with 1000 different random data"
authors = [
    {name = "mchauvin"}
]
requires-python = ">=3.13"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"